# aptos-marketplace

./: .gitignore
market-contract-apt/: Move.toml
market-contract-apt/.aptos/: config.yaml
market-contract-apt/sources/: launchpad.move  marketplace.move  merkle_proof.move  utils.move
market-contract-sui/: Move.toml
market-interface/: package-lock.json  package.json
market-interface/components/Footer/: footer.tsx
market-interface/components/Header/: header.tsx
market-interface/pages/: _app.tsx  index.tsx  inter.tsx  launchpad.tsx  my.tsx
market-interface/pages/collection/: [id].tsx
market-interface/pages/raffle/: index.tsx
market-rest-api/: package-lock.json  package.json
market-rest-api/market-db/: package-lock.json  package.json
market-rest-api/src/: app.module.ts  app.service.ts  cats.controller.ts  main.ts  user.model.ts
market-rest-api/src/controllers/collection/: collection.controller.ts
market-rest-api/src/entity/: Collection.ts  Lists.ts  Token.ts
market-rest-api/src/services/: collection.service.ts
new-interface/: package.json
new-interface/src/pages/: hello.tsx
nft-rest-backend/: .env  Cargo.toml  readme
nft-rest-backend/migrations/2022-12-14-064513_add_current_token_data/: up.sql
nft-rest-backend/src/: db.rs  lib.rs  main.rs  models.rs  redis.rs  schema.rs  service.rs
nft-rest-backend/src/api/: collection.rs  launchpad.rs  mod.rs  profile.rs
nft-rest-backend/src/models/: current_collection_datas.rs  current_token_datas.rs  current_token_ownerships.rs  mod.rs  table_items.rs  token_ownerships.rs
