[package]
name = "nft-rest-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.2.1"
tracing = "0.1"
tracing-subscriber = "0.2.0"
diesel = { version = "2.0.0", features = ["postgres","extras"] }
dotenvy = "0.15"
anyhow = "1.0.66"

[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
