[package]
name = "nft-rest-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.2.1"
tracing = "0.1"
tracing-subscriber = "0.2.0"
diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "numeric", "serde_json"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
anyhow = "1.0.66"
field_count = "0.1.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
chrono = { version = "0.4.19", features = ["clock", "serde"] }


[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
